[package]
name = "geopattern"
version = "0.2.0"
authors = ["Suyash <suyash93@protonmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Beautiful generative geometric background images from a string, a Rust implementation of geo_pattern from @jasonlong"
repository = "https://github.com/suyash/geopattern"
readme="README.md"
keywords = ["geometric", "patterns", "geopattern"]
exclude = [
    "/examples/samples/**",
    ".editorconfig",
    ".travis.yml"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.10.1"
svg = "0.5.12"
sha1 = "0.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.33"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.2.33"

# TODO: figure this out
# [profile.release]
# opt-level = "s"
