[package]
name = "geopattern"
version = "0.5.0"
authors = ["Suyash <hi@suy.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Beautiful generative geometric background images from a string, a Rust implementation of geo_pattern from @jasonlong"
repository = "https://github.com/suyash/geopattern-rs"
documentation = "https://docs.rs/geopattern"
readme = "README.md"
keywords = ["geometric", "patterns", "geopattern"]
include = ["src/", "benches", "LICENSE-*", "README.md"]

[dependencies]
svg = "0.8.0"

[dev-dependencies]
anyhow = "1.0.31"
criterion = "0.3.3"
rand = { version = "0.7.3", features = ["small_rng"] }
sha-1 = "0.9.1"

[[bench]]
name = "benches"
harness = false
